--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
+html , body {
     height: 100%;
     width: 100%;
-    margin: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
@@ -69,10 +70,32 @@ input[type=submit] {
     text-align: center;
 }
 
+.blue {
+    grid-row: 1 ;
+    grid-column: 3;
+    background-color: rgba(19, 33, 83, 0.73); 
+    color: white;
+    width: 430px;
+    height: 50px;
+    border-radius: 16px;
+    text-align: center;
+    align-self: end;
+    margin-bottom: 31px;
+    font-size: 11px;
+    line-height: 25px;
+}
+
+
 @media only screen and (max-width: 600px) {
+
+    .container {
+        grid-template-rows: 0.5fr 0.1fr 1fr;
+        grid-template-columns: 1fr;
+    }
+
     .text-container {
         grid-row: 1;
-        grid-column: 2 / 3;
+        grid-column: 1;
         width: 100%;
         margin: 30px;
         height: 250px;
@@ -82,11 +105,17 @@ input[type=submit] {
     .text-container h1 {
         font-size: 30px;
     }
-    
+
     .form-container {
-        grid-row: 2;
-        grid-column: 2 / 3; 
+        grid-row: 3;
+        grid-column: 1; 
         margin: 30px;
 
+    }
+
+    .blue {
+        grid-row: 2;
+        grid-column: 1;  
+        margin: 30px;
     }
 }
